# fukomaster

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml
src/: a.rs  b.rs  evdev.rs  main.rs  states.rs  swipe.rs  util.rs
