[package]
description = "Emulate a trackpad with your physical mouse"
name = "fukomaster"
version = "0.1.0"

authors = ["aecsocket <aecsocket@tutanota.com>"]
categories = ["command-line-utilities"]
edition = "2021"
keywords = ["mouse", "trackpad", "touchpad"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/aecsocket/fukomaster"
rust-version = "1.76.0"

[lints.rust]
missing_docs = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[dependencies]
# uinput = "0.1.3"
# evdev = "0.12.2"
anyhow = "1.0.86"
evdev-rs = { version = "0.6.1", features = ["libevdev-1-10"] }
